--- a/ASLStudyTool/client/src/components/TestMode.css
+++ b/ASLStudyTool/client/src/components/TestMode.css
@@ -189,6 +189,13 @@
   font-size: 18px;
 }
 
+.auto-starred {
+  display: inline-block;
+  color: #ffce00;
+  font-style: italic;
+  margin-left: 8px;
+}
+
 .test-container.results {
   text-align: center;
   padding: 40px 20px;
